...
                            onSelected = { onClick(item.name) }
                        )
                    }
                }
            }
            
            Row (Modifier.weight(.2f).testTag("Go Button")) {
                Button(
                    enabled = true,
                    onClick = { onClick("go") }
                ) {
                    Text("GO")
                }
...
