...
                    }
                ),
                maxLines = 1,
                modifier = modifier
                    .heightIn(min = 30.dp)
                    .padding(0.dp)
                    .testTag("Search Bar TextField")
            )
        }

    }
}

...
